--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -23,7 +23,8 @@ a {
   color: #555;
 }
 
-a:hover, a:focus {
+a:hover,
+a:focus {
   color: #e65540 !important;
 }
 
@@ -48,13 +49,13 @@ footer {
 }
 
 .font-14 {
-	font-size: 14px;
+  font-size: 14px;
 }
 
 .font-12 {
-	font-size: 12px;
+  font-size: 12px;
 }
 
 .font-11 {
-	font-size: 11px;
+  font-size: 11px;
 }
